feat: implement AI level generator with Firebase integration
- Add Python AI level generator using DeepSeek
- Implement Firebase Firestore integration for levels
- Add level validation and fallback system
- Create CLI tools for level generation and management
- Fix Firestore query issues and add proper error handling
- Add storage service for local progress management
- Update UI components for better level selection
- Add comprehensive documentation and setup scripts

This is the first version of the AI-powered level generation system
for PuzzlePath game. The generator creates valid puzzle levels with
continuous paths and integrates seamlessly with Firebase.

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,69 @@ yarn-error.*
 # local env files
 .env*.local
 .env
+service-account-key.json
 
 # typescript
 *.tsbuildinfo
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual environments
+venv/
+env/
+ENV/
+env.bak/
+venv.bak/
+
+# Python generator
+python_generator/venv/
+python_generator/__pycache__/
+python_generator/*.pyc
+python_generator/*.pyo
+python_generator/*.pyd
+python_generator/.Python
+python_generator/build/
+python_generator/develop-eggs/
+python_generator/dist/
+python_generator/downloads/
+python_generator/eggs/
+python_generator/.eggs/
+python_generator/lib/
+python_generator/lib64/
+python_generator/parts/
+python_generator/sdist/
+python_generator/var/
+python_generator/wheels/
+python_generator/*.egg-info/
+python_generator/.installed.cfg
+python_generator/*.egg
+python_generator/MANIFEST
+
+# Service account keys (security)
+*.json
+!package.json
+!package-lock.json
+!tsconfig.json
+!app.json
+!app.config.js
