feat(home): integra logo oficial de Pathly Game y mejora pantalla de inicio
- Integra logo oficial sin fondo (500x500 px)
- Crea componente Logo reutilizable
- Rediseña pantalla de inicio con mejor UX
- Actualiza todos los iconos con logo oficial
- Configura app.json para Google Play
- Añade documentación completa
- Elimina duplicación de texto en logo
- Prepara proyecto para publicación

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "temp-pathly",
-    "slug": "temp-pathly",
+    "name": "Pathly",
+    "slug": "pathly",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -13,17 +13,25 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.pathly.game"
     },
     "android": {
+      "package": "com.pathly.game",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#3B82F6"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "permissions": []
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "your-project-id"
+      }
     }
   }
 }
