feat(mvp): MVP Pathly 1.0.0 listo para producción
- ✅ Sistema de monetización AdMob implementado
- ✅ Sistema de pistas inteligente con anuncios recompensados
- ✅ Anuncios intersticiales cada 4 niveles
- ✅ Configuración de producción completa
- ✅ Documentación final del MVP
- ✅ Testing manual completado
- ✅ Listo para publicación en Google Play Store

--- a/app.json
+++ b/app.json
@@ -23,11 +23,22 @@
         "backgroundColor": "#3B82F6"
       },
       "edgeToEdgeEnabled": true,
-      "permissions": []
+      "permissions": [
+        "android.permission.INTERNET",
+        "android.permission.ACCESS_NETWORK_STATE"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
+    "plugins": [
+      [
+        "expo-ads-admob",
+        {
+          "androidAppId": "ca-app-pub-4553067801626383~6760188699"
+        }
+      ]
+    ],
     "extra": {
       "eas": {
         "projectId": "your-project-id"
