--- a/env.example
+++ b/env.example
@@ -16,3 +16,49 @@ FIREBASE_MEASUREMENT_ID=G-XXXXXXXXXX
 # 1. Copia este archivo: cp env.example .env
 # 2. Edita .env con tus credenciales reales de Firebase
 # 3. El archivo .env ya está en .gitignore para seguridad 
+
+# 🚀 AdMob Configuration - Variables de Entorno
+# 
+# IMPORTANTE: 
+# 1. Copia este archivo como .env
+# 2. Reemplaza los valores con tus IDs reales de AdMob
+# 3. NUNCA subas el archivo .env a Git
+# 4. Solo sube este archivo env.example como referencia
+
+# ========================================
+# 🔐 IDs de AdMob para Producción
+# ========================================
+
+# App IDs (uno por plataforma)
+ADMOB_ANDROID_APP_ID=ca-app-pub-XXXXXXXXXXXXXXXX~YYYYYYYYYY
+ADMOB_IOS_APP_ID=ca-app-pub-XXXXXXXXXXXXXXXX~YYYYYYYYYY
+
+# Ad Unit IDs (uno por tipo de anuncio)
+ADMOB_INTERSTITIAL_ID=ca-app-pub-XXXXXXXXXXXXXXXX/ZZZZZZZZZZ
+ADMOB_REWARDED_ID=ca-app-pub-XXXXXXXXXXXXXXXX/ZZZZZZZZZZ
+
+# ========================================
+# 📱 Configuración Adicional (Opcional)
+# ========================================
+
+# Modo de desarrollo (true/false)
+ADMOB_DEBUG_MODE=false
+
+# Tiempo de espera para anuncios (ms)
+ADMOB_TIMEOUT=30000
+
+# ========================================
+# 🔍 Cómo Obtener Estos IDs:
+# ========================================
+# 
+# 1. Ve a admob.google.com
+# 2. Crea una cuenta y configura información de pago
+# 3. Crea una nueva aplicación
+# 4. Crea unidades de anuncios (Interstitial y Rewarded)
+# 5. Copia los IDs que te proporciona AdMob
+# 
+# Formato de IDs:
+# - App ID: ca-app-pub-XXXXXXXXXXXXXXXX~YYYYYYYYYY
+# - Ad Unit ID: ca-app-pub-XXXXXXXXXXXXXXXX/ZZZZZZZZZZ
+#
+# ======================================== 
