--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "temp-pathly",
+  "name": "pathly",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "^1.24.0",
     "dotenv": "^17.2.0",
     "expo": "~53.0.20",
+    "expo-ads-admob": "^13.0.0",
     "expo-constants": "^17.1.7",
     "expo-status-bar": "~2.2.3",
     "firebase": "^12.0.0",
