feat(audio): implementar sistema completo de sonidos y música
- Crear servicio de audio con expo-av para manejar música y efectos
- Agregar componente AudioSettings con controles de volumen
- Implementar música de fondo automática (menú y juego)
- Agregar efectos de sonido: forward, back, win
- Integrar controles de audio en todas las pantallas
- Persistir configuración de audio en AsyncStorage
- Actualizar dependencias para compatibilidad con SDK 53

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Pathly",
-    "slug": "pathly",
+    "name": "Pathly Game",
+    "slug": "pathly-game",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
