--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "pathly",
+  "name": "pathly-game",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/slider": "4.5.6",
     "dotenv": "^17.2.0",
     "expo": "~53.0.20",
-    "expo-ads-admob": "^13.0.0",
+    "expo-av": "^15.1.7",
     "expo-constants": "^17.1.7",
+    "expo-dev-client": "~5.2.4",
     "expo-status-bar": "~2.2.3",
     "firebase": "^12.0.0",
     "react": "19.0.0",
