--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/slider": "4.5.6",
+    "@react-native-google-signin/google-signin": "^15.0.0",
     "dotenv": "^17.2.0",
     "expo": "~53.0.20",
+    "expo-auth-session": "^6.2.1",
     "expo-av": "^15.1.7",
     "expo-constants": "^17.1.7",
+    "expo-crypto": "^14.1.5",
     "expo-dev-client": "~5.2.4",
     "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "^14.2.0",
     "firebase": "^12.0.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
-    "react-native-dotenv": "^3.4.11"
+    "react-native-dotenv": "^3.4.11",
+    "react-native-purchases": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
