--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pathly-game",
-  "version": "1.0.2",
+  "version": "1.0.1",
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/slider": "4.5.6",
     "@react-native-google-signin/google-signin": "^15.0.0",
+    "canvas": "^3.1.2",
     "dotenv": "^17.2.0",
     "expo": "~53.0.20",
     "expo-auth-session": "^6.2.1",
