--- a/env.example
+++ b/env.example
@@ -1,64 +1,108 @@
-# Firebase Configuration - Pathly Project
-# ⚠️ IMPORTANTE: Copia este archivo como .env y reemplaza con tus credenciales reales
-# Puedes obtenerlas desde: https://console.firebase.google.com/
-
-FIREBASE_API_KEY=tu-api-key-aqui
-FIREBASE_AUTH_DOMAIN=tu-proyecto.firebaseapp.com
-FIREBASE_PROJECT_ID=tu-proyecto-id
-FIREBASE_STORAGE_BUCKET=tu-proyecto.appspot.com
+# Firebase Configuration
+FIREBASE_API_KEY=your_firebase_api_key_here
+FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
+FIREBASE_PROJECT_ID=your_project_id
+FIREBASE_STORAGE_BUCKET=your_project.appspot.com
 FIREBASE_MESSAGING_SENDER_ID=123456789
-FIREBASE_APP_ID=tu-app-id
-
-# Configuración adicional (opcional)
+FIREBASE_APP_ID=1:123456789:android:abcdef123456
 FIREBASE_MEASUREMENT_ID=G-XXXXXXXXXX
 
-# 📋 INSTRUCCIONES:
-# 1. Copia este archivo: cp env.example .env
-# 2. Edita .env con tus credenciales reales de Firebase
-# 3. El archivo .env ya está en .gitignore para seguridad 
+# Google Sign-In Configuration
+GOOGLE_WEB_CLIENT_ID=your_google_web_client_id_here
 
-# 🚀 AdMob Configuration - Variables de Entorno
-# 
-# IMPORTANTE: 
-# 1. Copia este archivo como .env
-# 2. Reemplaza los valores con tus IDs reales de AdMob
-# 3. NUNCA subas el archivo .env a Git
-# 4. Solo sube este archivo env.example como referencia
+# Level Generator API
+LEVEL_GENERATOR_URL=https://your-level-generator-api.com
+LEVEL_GENERATOR_API_KEY=your_api_key_here
 
-# ========================================
-# 🔐 IDs de AdMob para Producción
-# ========================================
+# AdMob Configuration (for future use)
+ADMOB_ANDROID_APP_ID=ca-app-pub-4553067801626383~6760188699
+ADMOB_IOS_APP_ID=ca-app-pub-4553067801626383~1234567890
 
-# App IDs (uno por plataforma)
-ADMOB_ANDROID_APP_ID=ca-app-pub-XXXXXXXXXXXXXXXX~YYYYYYYYYY
-ADMOB_IOS_APP_ID=ca-app-pub-XXXXXXXXXXXXXXXX~YYYYYYYYYY
+# Test Ad Units (for development)
+ADMOB_BANNER_AD_UNIT_ID=ca-app-pub-3940256099942544/6300978111
+ADMOB_INTERSTITIAL_AD_UNIT_ID=ca-app-pub-3940256099942544/1033173712
+ADMOB_REWARDED_AD_UNIT_ID=ca-app-pub-3940256099942544/5224354917
 
-# Ad Unit IDs (uno por tipo de anuncio)
-ADMOB_INTERSTITIAL_ID=ca-app-pub-XXXXXXXXXXXXXXXX/ZZZZZZZZZZ
-ADMOB_REWARDED_ID=ca-app-pub-XXXXXXXXXXXXXXXX/ZZZZZZZZZZ
+# Production Ad Units (for production)
+# ADMOB_BANNER_AD_UNIT_ID=ca-app-pub-4553067801626383/1234567890
+# ADMOB_INTERSTITIAL_AD_UNIT_ID=ca-app-pub-4553067801626383/0987654321
+# ADMOB_REWARDED_AD_UNIT_ID=ca-app-pub-4553067801626383/1122334455
 
-# ========================================
-# 📱 Configuración Adicional (Opcional)
-# ========================================
+# RevenueCat Configuration (for future use)
+REVENUECAT_ANDROID_API_KEY=your_revenuecat_android_api_key
+REVENUECAT_IOS_API_KEY=your_revenuecat_ios_api_key
 
-# Modo de desarrollo (true/false)
-ADMOB_DEBUG_MODE=false
+# Environment
+NODE_ENV=development
+# NODE_ENV=production
 
-# Tiempo de espera para anuncios (ms)
-ADMOB_TIMEOUT=30000
+# Debug Configuration
+DEBUG_MODE=true
+# DEBUG_MODE=false
 
-# ========================================
-# 🔍 Cómo Obtener Estos IDs:
-# ========================================
-# 
-# 1. Ve a admob.google.com
-# 2. Crea una cuenta y configura información de pago
-# 3. Crea una nueva aplicación
-# 4. Crea unidades de anuncios (Interstitial y Rewarded)
-# 5. Copia los IDs que te proporciona AdMob
-# 
-# Formato de IDs:
-# - App ID: ca-app-pub-XXXXXXXXXXXXXXXX~YYYYYYYYYY
-# - Ad Unit ID: ca-app-pub-XXXXXXXXXXXXXXXX/ZZZZZZZZZZ
-#
-# ======================================== 
+# Cache Configuration
+CACHE_DURATION_HOURS=24
+MAX_CACHE_SIZE_MB=50
+
+# API Rate Limiting
+MAX_REQUESTS_PER_MINUTE=60
+MAX_LEVELS_PER_REQUEST=10
+
+# Audio Configuration
+DEFAULT_MUSIC_VOLUME=0.7
+DEFAULT_SFX_VOLUME=0.8
+AUDIO_ENABLED=true
+
+# Game Configuration
+MAX_LEVELS_PER_DIFFICULTY=50
+HINT_COOLDOWN_SECONDS=30
+MAX_HINTS_PER_LEVEL=3
+
+# Analytics Configuration (for future use)
+ANALYTICS_ENABLED=false
+SENTRY_DSN=your_sentry_dsn_here
+
+# Feature Flags
+ENABLE_PREMIUM_FEATURES=false
+ENABLE_ADS=false
+ENABLE_ANALYTICS=false
+ENABLE_SOCIAL_FEATURES=false
+
+# Development Tools
+ENABLE_DEBUG_MENU=true
+ENABLE_TEST_LEVELS=true
+ENABLE_MOCK_DATA=true
+
+# Performance Configuration
+ENABLE_PERFORMANCE_MONITORING=false
+ENABLE_MEMORY_LEAK_DETECTION=false
+ENABLE_RENDER_OPTIMIZATION=true
+
+# Security Configuration
+ENABLE_SSL_PINNING=false
+ENABLE_CERTIFICATE_TRANSPARENCY=false
+ENABLE_APP_INTEGRITY_CHECK=false
+
+# Backup Configuration
+ENABLE_CLOUD_BACKUP=false
+BACKUP_FREQUENCY_HOURS=24
+MAX_BACKUP_SIZE_MB=10
+
+# Localization
+DEFAULT_LANGUAGE=es
+SUPPORTED_LANGUAGES=es,en
+
+# Accessibility
+ENABLE_VOICE_OVER=false
+ENABLE_LARGE_TEXT=false
+ENABLE_HIGH_CONTRAST=false
+
+# Network Configuration
+API_TIMEOUT_SECONDS=30
+MAX_RETRY_ATTEMPTS=3
+ENABLE_OFFLINE_MODE=true
+
+# Storage Configuration
+MAX_LOCAL_STORAGE_MB=100
+ENABLE_STORAGE_COMPRESSION=true
+STORAGE_ENCRYPTION_ENABLED=false 
