feat: implement complete AdMob integration with hint system - Add dynamic hint icons (💡 to 📺) - Implement free first hint + rewarded ads for additional hints - Add comprehensive AdMob testing scripts - Fix all AdMob configuration and permissions - Add production-ready AdMob setup - Complete hint system with proper ad integration

--- a/app.json
+++ b/app.json
@@ -32,14 +32,7 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": [
-      [
-        "expo-ads-admob",
-        {
-          "androidAppId": "ca-app-pub-4553067801626383~6760188699"
-        }
-      ]
-    ],
+    "plugins": [],
     "extra": {
       "eas": {
         "projectId": "your-project-id"
