--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "expo": "~53.0.20",
     "expo-auth-session": "^6.2.1",
     "expo-av": "^15.1.7",
+    "expo-build-properties": "^0.14.8",
     "expo-constants": "^17.1.7",
     "expo-crypto": "^14.1.5",
     "expo-dev-client": "~5.2.4",
+    "expo-router": "^5.1.4",
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "^14.2.0",
     "firebase": "^12.0.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-dotenv": "^3.4.11",
+    "react-native-google-mobile-ads": "^15.4.0",
     "react-native-purchases": "^9.0.0"
   },
   "devDependencies": {
