feat(release): v1.1.1 - App signing fixes and keystore security
- Fixed Google Play App Signing configuration
- Implemented proper keystore management
- Added keystore security documentation
- Updated release process with security best practices
- Generated AAB with correct signing for Google Play Store

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,14 @@ expo-env.d.ts
 *.key
 *.mobileprovision
 
+# Keystore files (security)
+android/app/keystore.properties
+android/app/*.keystore
+android/app/pathly-upload-key.jks
+android/app/upload-keystore.jks
+android/app/pathly-release-key.keystore
+deployment_cert.der
+
 # Metro
 .metro-health-check*
 
